--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 build/
+out/    # output directory
+.vscode/
+.vscode/c_cpp_properties.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+.vscode/settings.json
+.vscode/c_cpp_properties.json
